cloud/manifests/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        readinessProbe:
          httpGet:
            path: /health/
            port: 8000
            httpHeaders:
            - name: Host
              value: app-site
          initialDelaySeconds: 3
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /health/
            port: 8000
            httpHeaders:
            - name: Host
              value: app-site
          initialDelaySeconds: 3
          periodSeconds: 3

        image: eu.gcr.io/thesis-project-111/thesis-app:52235241
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 400m
            memory: 400Mi
          requests:
            cpu: 200m
            memory: 200Mi
        ports:
        - containerPort: 8000
